--- a/src/reset.css
+++ b/src/reset.css
@@ -1,6 +1,12 @@
 * {
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
-    font-family:"Roboto", sans-serif;
-};
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+button {
+  background-color: unset;
+  border: none;
+  cursor: pointer;
+}
